# starbucks-stores-api

./: Cargo.toml  README.md
src/: lib.rs
src/config/: mod.rs
src/controller/: search.rs
src/middleware/: dynamodb_connection.rs  error_handler.rs  mod.rs
src/model/: mod.rs  store_finder.rs  store_location.rs
src/types/: error.rs
