[package]
name = "starbucks_stores_api"
version = "0.1.0"
authors = ["Debojit Roy <debojit.roy@unohomeloans.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
csv = "1.1"
serde = "1.0.114"
serde_derive = "1.0.114"
envy = "0.4"
dotenv = "0.15.0"
warp = "0.2"
rusoto_core = "0.44"
dynomite = "0.9"
thiserror = "1.0"